2.1.0/_sources/gallery/event_handling/ginput_demo_sgskip.rst.txt


.. _sphx_glr_gallery_event_handling_ginput_demo_sgskip.py:


===========
Ginput Demo
===========

This provides examples of uses of interactive functions, such as ginput,




.. code-block:: python


    from __future__ import print_function

    import matplotlib.pyplot as plt
    import numpy as np
    t = np.arange(10)
    plt.plot(t, np.sin(t))
    print("Please click")
    x = plt.ginput(3)
    print("clicked", x)
    plt.show()

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: ginput_demo_sgskip.py <ginput_demo_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: ginput_demo_sgskip.ipynb <ginput_demo_sgskip.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
